{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 112,
  "lineage": "d23b331a-a900-b963-c496-be762aabe914",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "awesome_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0d76823f41239efee",
            "domain": "vpc",
            "id": "eipalloc-0d95456583647bec2",
            "network_interface": "eni-020ce127ae4ca3dc1",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-34-193-241-203.compute-1.amazonaws.com",
            "public_ip": "34.193.241.203",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_network_interface.awesome_network_interface",
            "module.network.aws_security_group.awesome_sg_web_traffic",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.2.50",
            "association_id": "eipassoc-0d9b93adfbff917aa",
            "domain": "vpc",
            "id": "eipalloc-03b9331a046590cd3",
            "network_interface": "eni-033c3bdba91d1cfc9",
            "private_dns": "ip-10-0-2-50.ec2.internal",
            "private_ip": "10.0.2.50",
            "public_dns": "ec2-18-233-115-44.compute-1.amazonaws.com",
            "public_ip": "18.233.115.44",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_network_interface.awesome_network_interface",
            "module.network.aws_security_group.awesome_sg_web_traffic",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "awesome_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0758470213bdd23b1",
            "arn": "arn:aws:ec2:us-east-1:535518648590:instance/i-0565e528d3445a2b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0565e528d3445a2b9",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-020ce127ae4ca3dc1"
              }
            ],
            "primary_network_interface_id": "eni-020ce127ae4ca3dc1",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "34.193.241.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-04488a40c2d7c9006",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3cb0ff0b31dddf",
            "tags": {
              "Name": "dev_web_server_0",
              "created_by": "John",
              "environment": "dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dbc7e14cc9c6ed3f"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.awesome_eip",
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_network_interface.awesome_network_interface",
            "module.network.aws_route_table.awesome_route_table",
            "module.network.aws_route_table_association.awesome_rt_accociate",
            "module.network.aws_security_group.awesome_sg_web_traffic",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod",
            "module.server.data.aws_ami.ubuntu"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0758470213bdd23b1",
            "arn": "arn:aws:ec2:us-east-1:535518648590:instance/i-0c5addf647d630b62",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c5addf647d630b62",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "mops",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-033c3bdba91d1cfc9"
              }
            ],
            "primary_network_interface_id": "eni-033c3bdba91d1cfc9",
            "private_dns": "ip-10-0-2-50.ec2.internal",
            "private_ip": "10.0.2.50",
            "public_ip": "18.233.115.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0caf04e076ae98a63",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3cb0ff0b31dddf",
            "tags": {
              "Name": "dev_web_server_1",
              "created_by": "John",
              "environment": "dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dbc7e14cc9c6ed3f"
            ]
          },
          "dependencies": [
            "module.network.aws_eip.awesome_eip",
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_network_interface.awesome_network_interface",
            "module.network.aws_route_table.awesome_route_table",
            "module.network.aws_route_table_association.awesome_rt_accociate",
            "module.network.aws_security_group.awesome_sg_web_traffic",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod",
            "module.server.data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "awesome_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:internet-gateway/igw-0543a0f2d16525a10",
            "id": "igw-0543a0f2d16525a10",
            "owner_id": "535518648590",
            "vpc_id": "vpc-06c25d0491a850c29"
          },
          "dependencies": [
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "awesome_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eni-020ce127ae4ca3dc1",
            "mac_address": "02:62:ae:e4:4c:c7",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0dbc7e14cc9c6ed3f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3cb0ff0b31dddf",
            "tags": {
              "created_by": "John",
              "environment": "dev"
            }
          },
          "dependencies": [
            "module.network.aws_security_group.awesome_sg_web_traffic",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "eni-033c3bdba91d1cfc9",
            "mac_address": "02:ce:1d:46:e9:6b",
            "private_ip": "10.0.2.50",
            "private_ips": [
              "10.0.2.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0dbc7e14cc9c6ed3f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ba3cb0ff0b31dddf",
            "tags": {
              "created_by": "John",
              "environment": "dev"
            }
          },
          "dependencies": [
            "module.network.aws_security_group.awesome_sg_web_traffic",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "awesome_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f00ccd07988b8f70",
            "owner_id": "535518648590",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0543a0f2d16525a10",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "created_by": "John",
              "environment": "dev"
            },
            "vpc_id": "vpc-06c25d0491a850c29"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "awesome_rt_accociate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0a96a2a2b6bc52c",
            "route_table_id": "rtb-0f00ccd07988b8f70",
            "subnet_id": "subnet-0ba3cb0ff0b31dddf"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.awesome_igw",
            "module.network.aws_route_table.awesome_route_table",
            "module.network.aws_subnet.awesome_subnet",
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "awesome_sg_web_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:security-group/sg-0dbc7e14cc9c6ed3f",
            "description": "Allow Web traffic on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbc7e14cc9c6ed3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24",
                  "10.0.3.0/24"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "dev-allow_web_traffic",
            "name_prefix": "",
            "owner_id": "535518648590",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-06c25d0491a850c29"
          },
          "dependencies": [
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "awesome_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:subnet/subnet-0ba3cb0ff0b31dddf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/16",
            "id": "subnet-0ba3cb0ff0b31dddf",
            "map_public_ip_on_launch": false,
            "owner_id": "535518648590",
            "tags": {
              "created_by": "John",
              "environment": "dev"
            },
            "vpc_id": "vpc-06c25d0491a850c29"
          },
          "dependencies": [
            "module.network.aws_vpc.prod"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:535518648590:vpc/vpc-06c25d0491a850c29",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05405c50ae0a62881",
            "default_route_table_id": "rtb-0ed7c1daa0ca2cc4f",
            "default_security_group_id": "sg-0b8bfa4b802a84171",
            "dhcp_options_id": "dopt-bbec06de",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-06c25d0491a850c29",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ed7c1daa0ca2cc4f",
            "owner_id": "535518648590",
            "tags": {
              "Name": "dev_vpc"
            }
          }
        }
      ]
    }
  ]
}